@@ -641,7 +641,7 @@ underlying 4-valent graph of the link diagram.
 
 Here "the underlying 4-valent graph" means the multigraph whose
 vertices are the crossings and whose edges are the arcs between
-crossings. In particular
+crossings. In particular:
 
 * two crossings may be connected even if they involve entirely
   different components of the link;
@@ -2075,6 +2075,38 @@ considered alternating.
 Returns:
     ``True`` if this is an alternating diagram, or ``False`` if this
     is a non-alternating diagram.)doc";
+
+// Docstring regina::python::doc::Link_::isConnected
+static const char *isConnected =
+R"doc(Determines whether the underlying 4-valent graph of the link diagram
+is connected.
+
+Here "the underlying 4-valent graph" means the multigraph whose
+vertices are the crossings and whose edges are the arcs between
+crossings. In particular:
+
+* the graph may be connected even if the link has multiple components;
+
+* if the graph is not connected then the link must be splittable,
+  though a splittable link _could_ still have a connected graph.
+
+If the link contains any zero-crossing components (i.e., unknotted
+circles disjoint from the rest of the diagram), then these components
+_will_ be taken into consideration here (although technically they are
+not modelled by a 4-valent graph). In particular:
+
+* this routine will return ``False`` if the link has a zero-crossing
+  link component and at least one other component;
+
+* such scenarios are the only cases where ``link.isConnected()`` and
+  ``link.graph().isConnected()`` may give different results, since
+  ModelLinkGraph strips away any zero-crossing components.
+
+For the purposes of this routine, an empty link is considered to be
+connected.
+
+Returns:
+    ``True`` if and only if the two given crossings are connected.)doc";
 
 // Docstring regina::python::doc::Link_::isEmpty
 static const char *isEmpty =
