@@ -133,6 +133,7 @@ Version 7.4  [ (to be announced) ]
         Class Link:
             - New routine makeAlternating().
             - New routine seifertCircles().
+            - New routine isConnected().
             - New routines countTrivialComponents() and pdAmbiguous(), to help
               understand the limitations of planar diagram codes.
             - New routine hash(), which uses the tight encoding.
